# PyGithub

./: .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .pymon  .readthedocs.yml  .travis.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CheeseShopDescription.rst  Contributing.md  Contributing.rst  DEPLOY.md  Design.md  Games to code  GenerateCode.py  IntegrationTest.py  LICENSE  MAINTAINERS  MANIFEST.in  NewIntegrationTest.py  OPENAPI.md  Pipfile  README.md  README.md best coding  README.rst  ReadMe.md  ReadMe.rst  Reference.md  ReferenceOfApis.md  ReferenceOfClasses.md  RoadMap.md  codecov.yml  examples.rst  generateDocstrings.py  make_doc.sh  (+18 more)
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml  release.yml  stale.yml  test_release_notes.yml
.github/workflows/: .lint_python.yml  GitHub_Action.yml  _build-pkg.yml  auto-fix.yml  check.yml  ci-checks.yml  ci.yml  codeql.yml  label-conflicts.yml  lint.yml  openapi.yml  pre-commit.yml  pypi-release.yml  python-publish.yml  release.yml  scorecard.yml  test-results.yml  top-issues.yaml
ApiDefinition/: AboutCompletionAndUpdate.txt  UserOrganizationComparison.txt  end_points.yml  unimplemented.comments.yml  unimplemented.events.yml  unimplemented.gists.yml  unimplemented.misc.yml  unimplemented.repo.yml  unimplemented.yml
ApiDefinition/classes/: AuthenticatedUser.yml  Branch.yml  Commit.yml  Contributor.yml  Dir.yml  Entity.yml  File.yml  Gist.yml  GitBlob.yml  GitCommit.yml  GitObject.yml  GitRef.yml  GitTag.yml  GitTree.yml  Github.yml  Issue.yml  Label.yml  Milestone.yml  Organization.yml  PublicKey.yml  PullRequest.yml  Repository.yml  Submodule.yml  Subscription.yml  SymLink.yml  Tag.yml  Team.yml  User.yml
CodeGenerator/templates/: GithubObject.Concatenation.py  GithubObject.MethodBody.DoRequest.py  GithubObject.MethodBody.UseResult.py  GithubObject.Parameters.py  GithubObject.py  ReferenceOfClasses.Parameters.md  ReferenceOfClasses.Type.md  ReferenceOfClasses.md
JsonDescriptionOfGithubApiV3/: description.000.human_readable.json  description.001.normalized.json  normalize.py
PyGithub/: __init__.py  integ_tests.py  tests.py  unit_tests.py
ReplayDataForIntegrationTest/: AuthenticatedUserDetails.txt  Colaborators.txt  CreateForkForOrganization.txt  CreateRepoForOrganization.txt  CreateRepoForUser.txt  Downloads.txt  Emails.txt  Events.txt  Gists.txt  GistsAll.txt  GitObjectsAlternative.txt  Hooks.txt  IssuesForAuthenticatedUser.txt  Keys.txt  MergePullRequest.txt  NamedUserDetails.txt  OrganizationDetails.txt  RepositoryDetails.txt  Watch.txt
ReplayDataForNewIntegrationTest/: AuthenticatedUser.Attributes.txt  AuthenticatedUser.EditWithAllArguments.txt  GitBlob.setUp.txt
bot_report/: README.md  report.py
codegen/: GenerateCode.py  GenerateReferenceOfApis.py  generate.py  generate_reference_of_apis.py
doc/: .gitignore  ChangeLog.md  ChangeLog.rst  Design.md  Makefile  ReferenceOfApis.md  ReferenceOfClasses.md  apis.rst  async.rst  changes.rst  conf.py  cook_book.rst  cook_book_raw_git_objects_final_state.dot  cook_book_raw_git_objects_intermediate_state.dot  development.rst  examples.rst  getting-started.rst  github.rst  github_integration.rst  github_objects.rst  graphql.rst  index.rst  introduction.rst  make.bat  migration.rst  openapi.rst  rationale.rst  reference.rst  scripts.rst  testing.rst  user_guide.rst  utilities.rst
github/: AccessToken.py  AccessToken.pyi  AdvancedSecurity.py  AdvancedSecurity.pyi  AdvisoryBase.py  AdvisoryCredit.py  AdvisoryCreditDetailed.py  AdvisoryVulnerability.py  AdvisoryVulnerabilityPackage.py  AppAuthentication.py  AppAuthentication.pyi  AppInstallationAuthentication.py  AppInstallationAuthentication.pyi  ApplicationOAuth.py  ApplicationOAuth.pyi  ArgumentsChecker.py  Artifact.py  Artifact.pyi  AuditLog.py  Auth.py  Auth.pyi  AuthenticatedUser.piy  AuthenticatedUser.py  AuthenticatedUser.pyi  Authorization.piy  Authorization.py  Authorization.pyi  AuthorizationApplication.py  AuthorizationApplication.pyi  AuthorizationOrganization.py  AuthorizationOrganization.pyi  Autolink.py  Autolink.pyi  Branch.piy  Branch.py  Branch.pyi  BranchProtection.piy  BranchProtection.py  BranchProtection.pyi  CVSS.py  (+425 more)
manage/: 2to3.sh  check.py  doc.py  extract_from_api_doc.py  generate.py  setup_enterprise_test_resources.py  test_coverage.py
openapi/: Cli.py  conftest.py
requirements/: docs.txt  scripts.txt  test.txt  types.txt
scripts/: add_attribute.py  compare_to_api_ref_doc.py  fix_headers.py  generate_async.py  get-openapi-path.sh  get-openapi-schema.sh  openapi-update-classes.pre-commit-config.yaml  openapi-update-classes.sh  openapi.py  prepare-for-update-assertions.py  sort_class.py  twitt_release.py  update-assertions.sh
test/: AuthenticatedUser.py  Authentication.py  Authorization.py  Branch.py  Commit.py  CommitComment.py  ContentFile.py  Download.py  Enterprise.py  Event.py  Exceptions.py  Framework.py  Gist.py  GistComment.py  GitBlob.py  GitCommit.py  GitObjects.py  GitRef.py  GitTag.py  GitTree.py  Github.py  Hook.py  IntegrationTest.py  Issue.py  Issue33.py  Issue50.py  Issue54.py  Issue80.py  IssueComment.py  IssueEvent.py  Label.py  Markdown.py  Milestone.py  MilestonesAndIssues.py  NamedUser.py  Organization.py  PaginatedList.py  PullRequest.py  PullRequestComment.py  PullRequestFile.py  (+6 more)
tests/: AllTests.py  AppAuthentication.py  ApplicationOAuth.py  Artifact.py  AuditLog.py  AuthenticatedUser.py  Authentication.py  Authorization.py  AuthorizationOrganization.py  Autolink.py  BadAttributes.py  Branch.py  BranchProtection.py  BranchProtection2.py  CheckRun.py  CheckSuite.py  CodeScanAlert.py  CodeScanAnalysis.py  Commit.py  CommitCombinedStatus.py  CommitComment.py  CommitStatus.py  CommitVerification.py  ConditionalRequestUpdate.py  Connection.py  ContentFile.py  Copilot.py  DependabotAlert.py  Deployment.py  DeploymentStatus.py  Download.py  Enterprise.py  EnterpriseAdmin.py  Environment.py  Equality.py  Event.py  Exceptions.py  ExposeAllAttributes.py  Framework.py  Framework.pyi  (+150 more)
(+3969 files in other folders)
